# simple_2d_game

./: .gitmodules  CMakeLists.txt  README.md  config.txt
src/: CMakeLists.txt  Components.hpp  Entity.hpp  EntityManager.hpp  Game.cpp  Game.h  Vec2.hpp  main.cpp
